--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="application-name" content="APP NAME" />
 		<meta name="theme-color" content="#FFFFFF" />
 		<meta name="apple-mobile-web-app-title" content="APP TITLE" />
-		<link rel="manifest" href="/Manifest.json" crossorigin="use-credentials" />
+		<link rel="manifest" href="./Manifest.json" crossorigin="use-credentials" />
 		<link rel="preconnect" href="https://storage.googleapis.com" />
 		<link referrerpolicy="shortcut icon" href="/Logo.ico" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/Logo-16x16.png" />
@@ -34,6 +34,6 @@
 			}
 		</script>
 		<div id="Root"><!--App-HTML--></div>
-		<script type="module" src="/Source/Client/Entry-Client.tsx"></script>
+		<script type="module" src="./Source/Client/Entry-Client.tsx"></script>
 	</body>
 </html>
